--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
+    "firebase": "^10.12.5",
     "mongodb": "^6.8.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
