--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "autoprefixer": "^10.4.20",
     "firebase": "^10.12.5",
     "mongodb": "^6.8.0",
