--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "mongodb": "^6.8.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.14",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
